--- a/student-form.html
+++ b/student-form.html
@@ -17,41 +17,38 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
   }
 
   .container {
     background: rgba(255,255,255,0.15);
     border-radius: 20px;
     backdrop-filter: blur(12px);
-    padding: 40px 50px;
-    width: 400px;
+    padding: 35px 45px;
+    width: 420px;
     box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-    text-align: center;
     color: #fff;
+    text-align: center;
   }
 
   h1 {
+    margin-bottom: 8px;
     font-size: 28px;
-    margin-bottom: 10px;
   }
 
   p {
+    opacity: 0.8;
     font-size: 14px;
-    margin-bottom: 25px;
-    opacity: 0.9;
+    margin-bottom: 20px;
   }
 
   input, select {
     width: 100%;
     padding: 12px;
-    margin: 10px 0;
+    margin: 8px 0;
     border: none;
-    border-radius: 8px;
-    background: rgba(255,255,255,0.9);
+    border-radius: 10px;
     font-size: 15px;
     outline: none;
-    color: #000;
   }
 
   button {
@@ -59,92 +56,137 @@
     padding: 12px;
     margin-top: 15px;
     border: none;
-    border-radius: 8px;
+    border-radius: 10px;
     background: #0077ff;
-    color: white;
+    font-size: 16px;
     font-weight: 600;
-    font-size: 15px;
+    color: #fff;
     cursor: pointer;
-    transition: 0.3s;
+    transition: .3s;
   }
 
   button:hover {
     background: #00bfff;
   }
 
-  .feedback-msg {
+  .success {
     margin-top: 10px;
-    font-size: 14px;
-    font-weight: 500;
+    font-size: 15px;
+    font-weight: 600;
+    color: lightgreen;
   }
 
+  .error {
+    margin-top: 10px;
+    font-size: 15px;
+    font-weight: 600;
+    color: #ff6b6b;
+  }
 </style>
 </head>
 <body>
 
 <div class="container">
   <h1>Student Profile</h1>
-  <p>Please fill out your profile to start chatting with your course-aware chatbot.</p>
+  <p>Complete your academic profile to unlock your personalized AI chatbot.</p>
 
   <input type="text" id="fullName" placeholder="Full Name">
-  <input type="email" id="email" placeholder="Email">
+  <input type="email" id="email" placeholder="Email (auto-filled)" disabled>
+
   <input type="text" id="rollNumber" placeholder="Roll Number">
+  <input type="text" id="phone" placeholder="Phone Number">
+
+  <select id="gender">
+    <option value="">Select Gender</option>
+    <option>Male</option>
+    <option>Female</option>
+    <option>Other</option>
+  </select>
+
+  <input type="date" id="dob">
+
   <input type="text" id="department" placeholder="Department">
   <input type="text" id="className" placeholder="Class / Section">
+
   <select id="semester">
     <option value="">Select Semester</option>
-    <option>1</option>
-    <option>2</option>
-    <option>3</option>
-    <option>4</option>
-    <option>5</option>
-    <option>6</option>
-    <option>7</option>
-    <option>8</option>
+    <option>1</option><option>2</option><option>3</option><option>4</option>
+    <option>5</option><option>6</option><option>7</option><option>8</option>
   </select>
 
   <button id="saveProfile">Save Profile</button>
-  <p id="profileMsg" class="feedback-msg"></p>
+  <p id="msg"></p>
 </div>
 
 <script>
-  // Check if profile exists
-  const storedProfile = localStorage.getItem('studentProfile');
-  if(storedProfile) {
-    const profile = JSON.parse(storedProfile);
-    document.getElementById('fullName').value = profile.fullName;
-    document.getElementById('email').value = profile.email;
-    document.getElementById('rollNumber').value = profile.rollNumber;
-    document.getElementById('department').value = profile.department;
-    document.getElementById('className').value = profile.className;
-    document.getElementById('semester').value = profile.semester;
+  const token = localStorage.getItem("token");
+  if (!token) {
+    window.location.href = "login.html";
   }
 
-  document.getElementById('saveProfile').addEventListener('click', () => {
-    const fullName = document.getElementById('fullName').value.trim();
-    const email = document.getElementById('email').value.trim();
-    const rollNumber = document.getElementById('rollNumber').value.trim();
-    const department = document.getElementById('department').value.trim();
-    const className = document.getElementById('className').value.trim();
-    const semester = document.getElementById('semester').value;
+  // Load profile on page open
+  async function loadProfile() {
+    const res = await fetch("/api/user/profile", {
+      headers: { "Authorization": "Bearer " + token }
+    });
+    const data = await res.json();
 
-    if(!fullName || !email || !rollNumber || !department || !className || !semester) {
-      document.getElementById('profileMsg').style.color = 'salmon';
-      document.getElementById('profileMsg').textContent = 'Please fill all fields.';
-      return;
+    if (data.success) {
+      const p = data.profile;
+
+      email.value = p.email;
+      fullName.value = p.fullName || "";
+      rollNumber.value = p.rollNumber || "";
+      phone.value = p.phone || "";
+      gender.value = p.gender || "";
+      dob.value = p.dob ? p.dob.substring(0,10) : "";
+      department.value = p.department || "";
+      className.value = p.className || "";
+      semester.value = p.semester || "";
     }
+  }
 
-    const profileData = { fullName, email, rollNumber, department, className, semester };
-    localStorage.setItem('studentProfile', JSON.stringify(profileData));
+  loadProfile();
 
-    document.getElementById('profileMsg').style.color = 'lightgreen';
-    document.getElementById('profileMsg').textContent = '✅ Profile saved successfully! Redirecting...';
+  // Save profile
+  document.getElementById("saveProfile").addEventListener("click", async () => {
+    msg.textContent = "";
+    msg.className = "";
 
-    // Redirect to chatbot interface after 1 second
-    setTimeout(() => {
-      window.location.href = 'chatbot.html';
-    }, 1000);
+    const body = {
+      fullName: fullName.value.trim(),
+      rollNumber: rollNumber.value.trim(),
+      phone: phone.value.trim(),
+      gender: gender.value,
+      dob: dob.value,
+      department: department.value.trim(),
+      className: className.value.trim(),
+      semester: semester.value
+    };
+
+    const res = await fetch("/api/user/profile", {
+      method: "PUT",
+      headers: {
+        "Content-Type": "application/json",
+        "Authorization": "Bearer " + token
+      },
+      body: JSON.stringify(body)
+    });
+
+    const data = await res.json();
+
+    if (data.success) {
+      msg.textContent = "Profile Updated Successfully ✔";
+      msg.className = "success";
+      setTimeout(() => {
+        window.location.href = "chatbot.html";
+      }, 1000);
+    } else {
+      msg.textContent = data.message || "Update failed";
+      msg.className = "error";
+    }
   });
+
 </script>
 
 </body>
