--- a/settings.html
+++ b/settings.html
@@ -151,7 +151,7 @@
 
   <script>
     const token = localStorage.getItem("authToken");
-    if (!token) window.location.href = "login.html";
+    if (!token) window.location.href = "index.html";
 
     async function loadSettings() {
       try {
@@ -218,7 +218,7 @@
     // Logout
     document.getElementById("logoutBtn").addEventListener("click", () => {
       localStorage.clear();
-      window.location.href = "login.html";
+      window.location.href = "index.html";
     });
   </script>
 
