--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ loginBtn.addEventListener("click", async () => {
     return error.textContent = "All fields required!";
 
   try {
-    const res = await fetch(`${API_URL}/api/login`, {
+    const res = await fetch(`${API_URL}/api/auth/login`, {
       method: "POST",
       credentials: "include",
       headers: {
